tests/specs/node/dynamic_import_and_require_dual/jsdoc_import_decl.js
// @ts-check

/** @import { kind } from "package" */

/**
 * @param {typeof kind} myValue
 */
export function log(myValue) {
  console.log(myValue);
}

log("value");
